src/components/app.scss
html {
	margin-right: 0 !important;
}



body {
    margin: 0;
    padding: 0;
    background-color: #545454;
    height: 100%;
    width: 100%;
    position: absolute;
}



h1 {
    color:whitesmoke;
}
h4 {
    color: whitesmoke;
}
h5 {
    color: #659797;
}
p {
    color: whitesmoke;
}

